--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,23 +1,20 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "module": "commonjs",                   
-    "moduleResolution": "node",            
-    "rootDir": "./",                       
-    "outDir": "./dist",                    
+    "module": "commonjs",
+    "moduleResolution": "node",
+    "rootDir": "./",
+    "outDir": "./dist",
 
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
-
-    "sourceMap": true,
     "resolveJsonModule": true,
     "allowSyntheticDefaultImports": true
   },
-  "include": ["./**/*.ts"],
+  "include": ["server.ts", "controllers/**/*.ts", "models/**/*.ts", "routes/**/*.ts"],
   "exclude": ["node_modules", "dist"],
-  
   "ts-node": {
     "compilerOptions": {
       "module": "commonjs"
