--- a/backend/package.json
+++ b/backend/package.json
@@ -1,29 +1,24 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "",
-  "main": "server.ts",
-  "type": "commonjs",
   "scripts": {
     "dev": "nodemon --watch './**/*.ts' --exec ts-node ./server.ts",
     "build": "tsc",
     "start": "node dist/server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
     "express": "^4.18.2",
-    "mongoose": "^8.3.2"
+    "mongoose": "^8.3.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.19",
+    "@types/node": "^22.0.0",
     "@types/express": "^4.17.21",
-    "@types/node": "^20.11.30",
-    "nodemon": "^3.1.0",
+    "@types/mongoose": "^5.11.97",
+    "@types/cors": "^2.8.19",
     "ts-node": "^10.9.2",
-    "typescript": "^5.4.3"
+    "nodemon": "^3.1.4",
+    "typescript": "^5.4.5"
   }
 }
