--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -2,22 +2,14 @@
   "compilerOptions": {
     "target": "ES2020",
     "module": "commonjs",
-    "moduleResolution": "node",
-    "rootDir": "./",
     "outDir": "./dist",
-
+    "rootDir": "./",
     "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "strict": true,
-    "skipLibCheck": true,
     "resolveJsonModule": true,
-    "allowSyntheticDefaultImports": true
+    "skipLibCheck": true,
+    "strict": true,
+    "types": ["node", "express"]
   },
-  "include": ["server.ts", "controllers/**/*.ts", "models/**/*.ts", "routes/**/*.ts"],
-  "exclude": ["node_modules", "dist"],
-  "ts-node": {
-    "compilerOptions": {
-      "module": "commonjs"
-    }
-  }
+  "include": ["./**/*.ts"],
+  "exclude": ["node_modules", "dist"]
 }
