--- a/backend/package.json
+++ b/backend/package.json
@@ -7,18 +7,18 @@
     "start": "node dist/server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^8.3.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "express": "^4.18.2",
+    "mongoose": "^8.3.2"
   },
   "devDependencies": {
-    "@types/node": "^22.0.0",
-    "@types/express": "^4.17.21",
-    "@types/mongoose": "^5.11.97",
     "@types/cors": "^2.8.19",
-    "ts-node": "^10.9.2",
+    "@types/express": "^4.17.23",
+    "@types/mongoose": "^5.11.97",
+    "@types/node": "^22.18.8",
     "nodemon": "^3.1.4",
+    "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   }
 }
