--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -7,8 +7,7 @@
     "esModuleInterop": true,
     "resolveJsonModule": true,
     "skipLibCheck": true,
-    "strict": true,
-    "types": ["node", "express"]
+    "strict": true
   },
   "include": ["./**/*.ts"],
   "exclude": ["node_modules", "dist"]
