--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -4,3 +4,6 @@ services:
     env: node
     buildCommand: npm install --include=dev && npm run build
     startCommand: npm start
+    envVars:
+      - key: NODE_ENV
+        value: production
