--- a/backend/package.json
+++ b/backend/package.json
@@ -11,14 +11,12 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "mongoose": "^8.3.2",
-    "typescript": "^5.9.3",
+    "typescript": "^5.4.5",
     "ts-node": "^10.9.2",
+    "nodemon": "^3.1.4",
     "@types/node": "^22.18.8",
     "@types/express": "^4.17.23",
-    "@types/cors": "^2.8.19",
-    "@types/mongoose": "^5.11.97"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.4"
+    "@types/mongoose": "^5.11.97",
+    "@types/cors": "^2.8.19"
   }
 }
