--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -2,12 +2,14 @@
   "compilerOptions": {
     "target": "ES2020",
     "module": "commonjs",
-    "outDir": "./dist",
     "rootDir": "./",
+    "outDir": "./dist",
     "esModuleInterop": true,
-    "resolveJsonModule": true,
     "skipLibCheck": true,
-    "strict": true
+    "forceConsistentCasingInFileNames": true,
+    "strict": true,
+    "resolveJsonModule": true,
+    "types": ["node", "express", "mongoose", "cors"]
   },
   "include": ["./**/*.ts"],
   "exclude": ["node_modules", "dist"]
