--- a/backend/package.json
+++ b/backend/package.json
@@ -10,13 +10,15 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
-    "mongoose": "^8.3.2",
-    "typescript": "^5.4.5",
-    "ts-node": "^10.9.2",
-    "nodemon": "^3.1.4",
-    "@types/node": "^22.18.8",
+    "mongoose": "^8.3.2"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.19",
     "@types/express": "^4.17.23",
     "@types/mongoose": "^5.11.97",
-    "@types/cors": "^2.8.19"
+    "@types/node": "^22.18.8",
+    "nodemon": "^3.1.4",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.3"
   }
 }
